@@ -20,6 +20,11 @@
     <p><i>Workaround</i>: Click on desired line and look in lower right corner status bar to see line number.</p>
     <p><img src="images/statusbar.gif" alt="Status Bar"></p>
   </li>
+  <li>
+    <p><strong>Shell Extension does now work in 64-bit Windows</strong></p>
+    <p>64-bit Windows versions cannot load WinMerge's Shell Extension. There is limitation in 64-bit Windows that 64-bit code cannot load 32-bit DLLs. Naturally Shell in 64-bit Windows is 64-bit code. And WinMerge Shell Extension is 32-bit DLL.</p>
+    <p><i>Workaround</i>: There is no workaround. This will be fixed when 64-bit version from Shell Extension is released. There are no plans for that yet.</p>
+  </li>
 </ul>
 <?php
   $page->printFoot();
