@@ -1,3 +1,7 @@
+2006-03-24 Tim
+ PATCH: [ 1457946 ] Add known issue about 64bit windows and shell extension
+  Web\2.4: limitations.php
+
 2006-03-15 Tim
  PATCH: [ 1449943 ] Web: Use new logo
   Web: page.inc
